updates for DM image storage and get
